# bob

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  KEYMAPPING.md  README.md  community_patch_settings.toml  example_community_patch_settings.toml  format.ps1  gen_compdb.ps1  xmake.lua
.github/workflows/: ci.yaml  release.yaml
app/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
app/src/: App.svelte  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: github.rs  main.rs
app/src/lib/: Controls.svelte
assets/: launcher.icns
enc_temp_folder/b88ed8935040e698507ae91ac2f1758/: hotkeys.cc
macos-dylib/: xmake.lua
macos-dylib/src/: main.cc
macos-launcher/: xmake.lua
macos-launcher/src/: ActionView.swift  ContentView.swift  GitHubLib.swift  Info.plist  LauncherMain.swift  ManagedURL.swift  TemporaryFolderURL.swift  XsollaLib.swift  ini.swift  launcher.icns  module.modulemap  rsync.cc  rsync.h  rsync.swift
macos-launcher/src/Assets.xcassets/lcarLightOrange.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/lcarOrange.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/lcarPink.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/lcarPlum.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/lcarTan.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/lcarViolet.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/lcarWhite.colorset/: Contents.json
macos-launcher/src/Assets.xcassets/ufp-logo.imageset/: Contents.json
macos-launcher/src/ViewModel/: GameUpdaterViewModel.swift
macos-loader/: xmake.lua
macos-loader/src/: folder_manager.h  main.cc
mods/: xmake.lua
mods/src/: config.cc  config.h  folder_manager.mm  str_utils.h  utils.cc  version.h
mods/src/il2cpp/: GameAssembly.lib  il2cpp-functions.cc  il2cpp-functions.h  il2cpp_helper.cc  il2cpp_helper.h
mods/src/patches/: gamefunctions.h  key.cc  key.h  mapkey.cc  mapkey.h  modifierkey.cc  modifierkey.h  patches.cc  patches.h
mods/src/patches/parts/: buff_fixes.cc  chat.cc  disable_banners.cc  fix_pan.cc  fix_unity_web_request.cc  free_resize.cc  hotkeys.cc  improve_responsiveness.cc  misc.cc  object_tracker.cc  sync.cc  testing.cc  ui_scale.cc  zoom.cc
mods/src/prime/: ActionCostContext.h  ActionData.h  ActionPromptPopupViewController.h  ActivatedAbilityType.h  ArmadaObjectViewerWidget.h  BattleTargetData.h  BlurController.h  BookmarksManager.h  BundleDataWidget.h  CallbackContainer.h  Camera.h  Canvas.h  CanvasController.h  ChatManager.h  ChatMessageListLocalViewController.h  ChatPreviewController.h  ClientModifierType.h  DeploymentManager.h  EventSystem.h  FleetLocalViewController.h  FleetsManager.h  FullScreenChatViewController.h  GameObject.h  GenericButtonContext.h  HttpRequest.h  IBuffComparer.h  IEnumerator.h  InterstitialViewController.h  InventoryForPopup.h  MissionsObjectViewerWidget.h  NavigationDirector.h  NavigationInteractionUIViewController.h  NavigationPan.h  NavigationSectionManager.h  NavigationZoom.h  ObjectViewerBaseWidget.h  ParentObjectViewerViewController.h  PreScanStationTargetWidget.h  PreScanTargetWidget.h  RequestDispatcherBase.h  (+15 more)
mods/src/prime/proto/: Digit.Client.Localization.proto  Digit.Client.SaveSystem.proto  Digit.Networking.Core.proto  Digit.Platform.Models.proto  Digit.Prime.Bookmarks.proto  Digit.Prime.Inventories.proto  Digit.Prime.Missions.proto  Digit.Prime.NewFlags.proto  Digit.Prime.PersistentPrefs.proto  Digit.Prime.TerritoryCapture.proto  Digit.PrimePlatform.Content.proto  Digit.PrimePlatform.Models.proto  Digit.PrimeServer.Models.proto  stfc.proto
scripts/: create-mac-dmg.sh
src/: main.cc  prime_types.h  utils.cc  utils.h  version.cc  version.h  version.rc
src/il2cpp/: il2cpp_helper.cc  il2cpp_helper.h
src/patches/: config.cc  config.h  gamefunctions.h  key.cc  key.h  mapkey.cc  mapkey.h  modifierkey.cc  modifierkey.h  patches.cc  patches.h
src/patches/parts/: buff_fixes.cc  disable_banners.cc  fix_pan.cc  fix_unity_web_request.cc  free_resize.cc  hotkeys.cc  improve_responsiveness.cc  misc.cc  sync.cc  testing.cc  ui_scale.cc  zoom.cc
src/prime/: ActionRequirement.h  AllianceStarbaseObjectViewerWidget.h  AnimatedRewardsScreenViewController.h  ArmadaObjectViewerWidget.h  AspectRatioConstraintHandler.h  BattleTargetData.h  BlurController.h  BookmarksManager.h  Bundle.h  Camera.h  CanRepairRequirement.h  CanvasController.h  CanvasScaler.h  CelestialObjectViewerWidget.h  ChatManager.h  ChatMessageListLocalViewController.h  ChatPreviewController.h  DeploymentManager.h  EmbassyObjectViewer.h  EntityGroup.h  EventSystem.h  FleetBarViewController.h  FleetLocalViewController.h  FleetPlayerData.h  FleetsManager.h  FullScreenChatViewController.h  GameObject.h  GenericButtonContext.h  GenericRewardsScreenViewController.h  HousingObjectViewerWidget.h  HttpJob.h  HttpRequest.h  HttpResponse.h  Hub.h  IBuffData.h  IList.h  KeyCode.h  LanguageManager.h  MiningObjectViewerWidget.h  MissionsObjectViewerWidget.h  (+24 more)
src/prime/proto/: Digit.Client.Localization.pb.cc  Digit.Client.Localization.pb.h  Digit.Client.SaveSystem.pb.cc  Digit.Client.SaveSystem.pb.h  Digit.Networking.Core.pb.cc  Digit.Networking.Core.pb.h  Digit.Platform.Models.pb.cc  Digit.Platform.Models.pb.h  Digit.Prime.Bookmarks.pb.cc  Digit.Prime.Bookmarks.pb.h  Digit.Prime.Inventories.pb.cc  Digit.Prime.Inventories.pb.h  Digit.Prime.Missions.pb.cc  Digit.Prime.Missions.pb.h  Digit.Prime.NewFlags.pb.cc  Digit.Prime.NewFlags.pb.h  Digit.Prime.PersistentPrefs.pb.cc  Digit.Prime.PersistentPrefs.pb.h  Digit.Prime.TerritoryCapture.pb.cc  Digit.Prime.TerritoryCapture.pb.h  Digit.PrimePlatform.Content.pb.cc  Digit.PrimePlatform.Content.pb.h  Digit.PrimePlatform.Models.pb.cc  Digit.PrimePlatform.Models.pb.h  stfc.pb.cc  stfc.pb.h
win-proxy-dll/: xmake.lua
win-proxy-dll/src/: main.cc  version.cc  version.def
xmake-packages/: xmake.lua
xmake-packages/patches/protobuf-cpp/26.0/: osx_architectures.patch
