[package]
name = "community-patch-launcher"
version = "0.0.0"
description = "STFC Community Patch Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
reqwest = { version = "0.11.20", features = ["stream", "json"] }
fast_rsync = "0.2.0"
roxmltree = "0.18.0"
sevenz-rust = "0.5.3"
futures-util = "0.3.28"
tempfile = "3.8.0"
ms-detours = "4.0.3"
winapi = { version = "0.3.9", features = ["impl-default", "synchapi"] }
pelite = "0.10"
version-compare = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
